docs/api/0.4.2-beta/ironwood/bench/NanoBench.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.4\.2\-beta**

[All packages](../../README.md) / [`ironwood.bench`](package-summary.md)

# NanoBench

**Class** · `ironwood.bench.NanoBench`

```java
public class NanoBench
```

Reports the count, average, minimum, and maximum latency in nanoseconds.



There is no warmup, histogram, or percentile reporting.



Call [`mark()`](#member-mark-28--29-) before each operation and [`measure()`](#member-measure-28--29-) afterward.
Alternatively, pass [`measure(long)`](#member-measure-28-long-29-) an elapsed duration computed with
[`System#nanoTime()`](../lang/System.md#member-nanoTime-28--29-) before and after the operation.
Unlike [`Bench`](Bench.md), `measure()` does not consume the mark or check
whether one exists. Repeated calls to it measure from the same start.
Callers must pair operations correctly, supply nonnegative durations, and keep
the measurement count and nanosecond sum within the signed int and long ranges
respectively.
These obligations add no runtime validation to the measurement path.



Recording and reset allocate nothing. Printing uses a reusable builder
and creates no report String. [`results()`](#member-results-28--29-) instead returns a fresh
caller-owned snapshot. Free snapshots and the benchmark after use. Instances
are unsynchronized and intended for one thread. All reported times are
integral nanoseconds; the mean is truncated toward zero.
Use [`reset()`](#member-reset-28--29-) to reuse the benchmark; [`getMeasurements()`](#member-getMeasurements-28--29-),
[`getAverage()`](#member-getAverage-28--29-), [`getMinTime()`](#member-getMinTime-28--29-), and [`getMaxTime()`](#member-getMaxTime-28--29-) return
its statistics.



This example records 1,000 busy waits using `mark()` and
`measure()`. It prints the statistics, reclaims the benchmark, and
exits with status `0`. Actual timings vary by machine.



```java
import ironwood.bench.NanoBench;

public class NanoBenchExample {

    public static int main(String[] args) {

        NanoBench bench = new NanoBench();
        for (int i = 0; i < 1000; i++) {
            bench.mark();
            long start = System.nanoTime();
            while (System.nanoTime() - start < 1000);
            bench.measure();
        }
        bench.printResults();
        free bench;
        return 0;
    }
}
```





You can read [`System#nanoTime()`](../lang/System.md#member-nanoTime-28--29-) yourself instead of using
[`mark()`](#member-mark-28--29-) and [`measure()`](#member-measure-28--29-). Replace the example's entire
measurement loop with the following loop, which passes elapsed nanoseconds
to [`measure(long)`](#member-measure-28-long-29-). Keep the same setup, `printResults()`, and
cleanup. Both forms record every iteration without warmup exclusion and
report the same statistics: count, average, minimum, and maximum.



```java
for (int i = 0; i < 1000; i++) {
    long start = System.nanoTime();
    while (System.nanoTime() - start < 1000);
    bench.measure(System.nanoTime() - start);
}
```

**See also**

[`Bench`](Bench.md)


## Member summary

[Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`NanoBench()`](#member-NanoBench-28--29-) | Creates an empty benchmark and its reusable output buffer. |
| [`reset()`](#member-reset-28--29-) | Clears statistics and the start timestamp, retaining the output buffer. |
| [`mark()`](#member-mark-28--29-) | Starts or replaces the timer. |
| [`measure()`](#member-measure-28--29-) | Records elapsed nanoseconds since the most recent mark, without consuming it. |
| [`measure(long)`](#member-measure-28-long-29-) | Records a caller-measured duration without changing the timer. |
| [`getMeasurements()`](#member-getMeasurements-28--29-) | Returns the number of measurements since reset. |
| [`getAverage()`](#member-getAverage-28--29-) | Returns the truncated mean in nanoseconds, or zero if empty. |
| [`getMinTime()`](#member-getMinTime-28--29-) | Returns minimum nanoseconds, or `Long.MAX_VALUE` if empty. |
| [`getMaxTime()`](#member-getMaxTime-28--29-) | Returns maximum nanoseconds, or `Long.MIN_VALUE` if empty. |
| [`results()`](#member-results-28--29-) | Returns a fresh caller-owned report String, including a trailing blank line. |
| [`printResults()`](#member-printResults-28--29-) | Prints statistics and a blank line directly from the reusable buffer. |

## Constructors

<a name="member-NanoBench-28--29-"></a>

### `NanoBench()`

```java
public NanoBench()
```

Creates an empty benchmark and its reusable output buffer.


[Back to member summary](#member-summary)

## Methods

<a name="member-reset-28--29-"></a>

### `reset()`

```java
public final void reset()
```

Clears statistics and the start timestamp, retaining the output buffer.


[Back to member summary](#member-summary)

<a name="member-mark-28--29-"></a>

### `mark()`

```java
public final void mark()
```

Starts or replaces the timer.


[Back to member summary](#member-summary)

<a name="member-measure-28--29-"></a>

### `measure()`

```java
public final void measure()
```

Records elapsed nanoseconds since the most recent mark, without consuming it.


[Back to member summary](#member-summary)

<a name="member-measure-28-long-29-"></a>

### `measure(long)`

```java
public final void measure(long elapsed)
```

Records a caller-measured duration without changing the timer.



Pass the difference between [`System#nanoTime()`](../lang/System.md#member-nanoTime-28--29-) readings taken
before and after the operation. Every supplied duration is recorded;
NanoBench has no warmup exclusion.

**Parameters**

| Name | Description |
| --- | --- |
| `elapsed` | nonnegative elapsed nanoseconds |


[Back to member summary](#member-summary)

<a name="member-getMeasurements-28--29-"></a>

### `getMeasurements()`

```java
public final int getMeasurements()
```

Returns the number of measurements since reset.


[Back to member summary](#member-summary)

<a name="member-getAverage-28--29-"></a>

### `getAverage()`

```java
public final long getAverage()
```

Returns the truncated mean in nanoseconds, or zero if empty.


[Back to member summary](#member-summary)

<a name="member-getMinTime-28--29-"></a>

### `getMinTime()`

```java
public final long getMinTime()
```

Returns minimum nanoseconds, or `Long.MAX_VALUE` if empty.


[Back to member summary](#member-summary)

<a name="member-getMaxTime-28--29-"></a>

### `getMaxTime()`

```java
public final long getMaxTime()
```

Returns maximum nanoseconds, or `Long.MIN_VALUE` if empty.


[Back to member summary](#member-summary)

<a name="member-results-28--29-"></a>

### `results()`

```java
public final String results()
```

Returns a fresh caller-owned report String, including a trailing blank line.


[Back to member summary](#member-summary)

<a name="member-printResults-28--29-"></a>

### `printResults()`

```java
public final void printResults()
```

Prints statistics and a blank line directly from the reusable buffer.


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
